
noinst_HEADERS = \
commands.h     libproto.h     sounds.h	     attack.h \
Makefile.in    config.h       living.h       player.h       spellist.h \
define.h       loader.h       race.h         material.h     spells.h \
arch.h         face.h         logger.h       re-cmp.h       sproto.h \
artifact.h     funcpoint.h    map.h          recipe.h       treasure.h \
global.h       newclient.h    shstr.h        version.h      tod.h\
god.h          newserver.h    skillist.h     xdir.h         proto.h \
book.h         includes.h     object.h       skills.h	    sockproto.h \
plugin.h       plugproto.h    timers.h

