
noinst_HEADERS = \
commands.h     libproto.h     sounds.h	     attack.h       config.h \
living.h       player.h       define.h       loader.h       race.h \
material.h     spells.h       face.h         logger.h       re-cmp.h \
sproto.h       artifact.h     funcpoint.h    map.h          recipe.h \
treasure.h     global.h       newclient.h    path.h         shstr.h \
tod.h          god.h          newserver.h    quest.h	    xdir.h \
book.h         includes.h     object.h       skills.h	    sockproto.h \
plugin.h       timers.h

